# mentor_api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  nginx.conf  pyproject.toml
src/: schema.yml
src/api/: docs.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/api/migrations/: 0001_initial.py
src/api/tests/: test_api.py  test_urls.py
src/core/: config.py  settings.py
